--- a/app/src/main/res/menu/cashier_menu.xml
+++ b/app/src/main/res/menu/cashier_menu.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/linkToExpense"
+        android:orderInCategory="100"
+        android:title="Expense"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/connectPrinter"
         android:orderInCategory="100"
         android:title="Connect to Printer"
