--- a/app/src/main/res/layout/fragment_cash_out.xml
+++ b/app/src/main/res/layout/fragment_cash_out.xml
@@ -32,6 +32,7 @@
             android:orientation="vertical"
             android:layout_alignParentBottom="true">
             <Button
+                android:visibility="gone"
                 android:id="@+id/btnLinkToAddCashOut"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
