--- a/app/src/main/res/menu/activity_main_panel_drawer.xml
+++ b/app/src/main/res/menu/activity_main_panel_drawer.xml
@@ -5,27 +5,27 @@
         <item
             android:id="@+id/nav_dashboard"
             android:icon="@drawable/ic_dashboard"
-            android:title="Dashboard" />
+            android:title="@string/nav_dashboard" />
         <item
             android:id="@+id/nav_product"
             android:icon="@drawable/ic_product"
-            android:title="Product" />
+            android:title="@string/nav_product" />
         <item
             android:id="@+id/nav_sales"
             android:icon="@drawable/ic_expense"
-            android:title="Sales" />
+            android:title="@string/nav_sales" />
         <item
             android:id="@+id/nav_expense"
             android:icon="@drawable/ic_attach_money_black_24dp"
-            android:title="Cash In and Out" />
+            android:title="@string/nav_report" />
         <item
             android:id="@+id/nav_member"
             android:icon="@drawable/ic_member"
-            android:title="Member" />
+            android:title="@string/nav_member" />
         <item
             android:id="@+id/nav_user"
             android:icon="@drawable/ic_person"
-            android:title="User" />
+            android:title="@string/nav_user" />
 
     </group>
 
@@ -33,10 +33,10 @@
         <menu>
             <item
                 android:id="@+id/nav_setting"
-                android:title="Setting" />
+                android:title="@string/nav_setting" />
             <item
                 android:id="@+id/nav_logout"
-                android:title="Logout" />
+                android:title="@string/nav_logout" />
         </menu>
     </item>
 
